@startuml

title __DB's Class Diagram__\n

  namespace com.ultimapieza.puzzledroid {
    namespace db {
      class com.ultimapieza.puzzledroid.db.DbHelper {
          {static} + TABLE_SCORE : String
          {static} - DATABASE_NAME : String
          {static} - DATABASE_VERSION : int
          + DbHelper()
          + getTableScore()
          + onCreate()
          + onUpgrade()
      }
    }
  }
  

  namespace com.ultimapieza.puzzledroid {
    namespace db {
      class com.ultimapieza.puzzledroid.db.DbHelperNewPlayer {
          {static} + TABLE_PLAYER : String
          {static} - DATABASE_NAME : String
          {static} - DATABASE_VERSION : int
          + DbHelperNewPlayer()
          + getTablePlayer()
          + onCreate()
          + onUpgrade()
      }
    }
  }
  

  namespace com.ultimapieza.puzzledroid {
    namespace db {
      class com.ultimapieza.puzzledroid.db.DbNewPlayer {
          ~ context : Context
          ~ name : String
          ~ score : int
          + DbNewPlayer()
          + GetName()
          + PlayerPuzzleDroid()
          + insertPlayer()
      }
    }
  }
  

  namespace com.ultimapieza.puzzledroid {
    namespace db {
      class com.ultimapieza.puzzledroid.db.DbPlayer {
          ~ context : Context
          + DbPlayer()
          + insertPlayer()
      }
    }
  }
  

  com.ultimapieza.puzzledroid.db.DbHelper -up-|> android.database.sqlite.SQLiteOpenHelper
  com.ultimapieza.puzzledroid.db.DbHelperNewPlayer -up-|> android.database.sqlite.SQLiteOpenHelper
  com.ultimapieza.puzzledroid.db.DbNewPlayer -up-|> com.ultimapieza.puzzledroid.db.DbHelperNewPlayer
  com.ultimapieza.puzzledroid.db.DbNewPlayer o-- com.ultimapieza.puzzledroid.db.DbHelperNewPlayer : dbH
  com.ultimapieza.puzzledroid.db.DbNewPlayer o-- com.ultimapieza.puzzledroid.LoginActivity : playerName
  com.ultimapieza.puzzledroid.db.DbNewPlayer o-- com.ultimapieza.puzzledroid.PuzzleActivity : score_
  com.ultimapieza.puzzledroid.db.DbPlayer -up-|> com.ultimapieza.puzzledroid.db.DbHelper
  com.ultimapieza.puzzledroid.db.DbPlayer o-- com.ultimapieza.puzzledroid.db.DbHelper : dbH
  com.ultimapieza.puzzledroid.db.DbPlayer o-- com.ultimapieza.puzzledroid.LoginActivity : playerName
  com.ultimapieza.puzzledroid.db.DbPlayer o-- com.ultimapieza.puzzledroid.PuzzleActivity : score


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
